--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,6 +10,8 @@ div.footer {
   padding-left: 0px;
   bottom: 0;
   width: 100%;
+  vertical-align: middle;
+  font-size: 10px !important;
 }
 
 /*BLOQUE*/
@@ -19,6 +21,7 @@ div.footer {
   width:100%;
   right: 0;
   left: 0;
+  
 }
 
 .footer--grad {
