Agregué validaciones a los campos del formulario de contacto, de registro y suscribir. Agregué envío de mail para comprar

--- a/css/destino.css
+++ b/css/destino.css
@@ -143,6 +143,9 @@ form a {
   font-family: "Lato" !important;
   font-size: 16px; }
 
+form div {
+  padding-bottom: 16px; }
+
 form p, h5 {
   color: white !important; }
 
