--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -109,6 +109,7 @@ font-size: $standard-font-size+8;
 /*BLOQUE*/
 .section {
   text-align: center !important;
+  padding-bottom: 50px;
 }
 
 .section--welcome {
