--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,14 +14,19 @@ div.footer {
   font-size: 10px !important;
 }
 
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /*BLOQUE*/
  .footer {
   position:absolute;
   bottom:0px;
   width:100%;
-  right: 0;
-  left: 0;
-  
+  right: 0px !important;
+  left: 0px !important;
 }
 
 .footer--grad {
@@ -33,7 +38,6 @@ div.footer {
 @media (min-width: 320px) {
   form {
    padding: $standard-padding;
-   
   }
 }
 
