--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -63,6 +63,10 @@ form p, h5 {
   color: $main-color !important;
 }
 
+.card-text {
+  color: black !important;
+}
+
 .badge {
   background-color: $tertiary-color;
 }
