--- a/css/destino.css
+++ b/css/destino.css
@@ -154,6 +154,9 @@ form p, h5 {
 .card-text {
   color: black !important; }
 
+.card {
+  text-align: center; }
+
 .badge {
   background-color: #F15F79; }
 
@@ -238,7 +241,9 @@ svg:hover {
     margin-right: auto;
     margin-bottom: 50px;
     width: 80%;
-    height: auto; } }
+    height: auto; }
+  .navbar-nav {
+    padding-left: 20px !important; } }
 
 @media (min-width: 1200px) {
   body {
@@ -297,8 +302,7 @@ div.footer {
     padding-right: 16px; } }
 
 .shopping-cart {
-  padding-bottom: 50px;
-  font-family: 'Montserrat', sans-serif; }
+  padding-bottom: 50px; }
 
 .shopping-cart .content {
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
