--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -122,6 +122,12 @@ font-size: $standard-font-size+8;
 
 .section--welcome {
   font-size: $standard-font-size*2 !important;
+  color: $tertiary-color;
+}
+
+.welcome {
+  color: rgb(83, 82, 82);
+  text-shadow: black;
 }
 
 .section--intro {
