--- a/css/destino.css
+++ b/css/destino.css
@@ -195,7 +195,12 @@ form p, h5 {
   padding-bottom: 50px; }
 
 .section--welcome {
-  font-size: 32px !important; }
+  font-size: 32px !important;
+  color: #F15F79; }
+
+.welcome {
+  color: #535252;
+  text-shadow: black; }
 
 .section--intro {
   font-size: 16px !important; }
